--- a/WindowsFormsApp6/WindowsFormsApp6.csproj
+++ b/WindowsFormsApp6/WindowsFormsApp6.csproj
@@ -60,6 +60,7 @@
     <Compile Include="OperatorMethod.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
     <Compile Include="Опр.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
