--- a/WindowsFormsApp6/WindowsFormsApp6.csproj
+++ b/WindowsFormsApp6/WindowsFormsApp6.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
+    <Compile Include="Triangle.cs" />
     <Compile Include="Опр.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
